Fixed Navigation styling to work on mobile

--- a/src/public/assets/css/Navigation-Clean1.css
+++ b/src/public/assets/css/Navigation-Clean1.css
@@ -32,7 +32,6 @@
     color:inherit;
     padding-top: 5px;
     align-content: center;
-    vertical-align: 
 }
 
 .navigation-clean.navbar .navbar-nav > li > a {
